syntax="proto3";
option java_package="com.auth.security.stub";
option java_multiple_files = true;

service UserService {
  rpc getUserInfo(DataRequest) returns (User);
  rpc Register(RegistrationRequest) returns (RegistrationResponse);
}
service AuthService {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
  rpc ValidateToken(TokenRequest) returns (TokenValidationResponse);
  rpc Logout(TokenRequest) returns (LogoutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest {
  string email = 1;
  string password = 2;
}
message AuthenticationResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegistrationRequest {
    UserRequest user = 1;
}
message RegistrationResponse {
  string message = 1;
}

message DataRequest{

    }
message User{
  int64 id=1;
  string firstname=2;
  string lastname=3;
  string email=4;
  string password=5;
  string role=6;
}

message UserRequest{
  string firstname=1;
  string lastname=2;
  string email=3;
  string password=4;
  string role=5;
}
message token{
  int64 id=1;
  string token=2;
  string tokenType=3;
  string revoked=4;
  string expired=5;
  User user=6;
}

message TokenRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message TokenValidationResponse {
  bool valid = 1;
  string role = 2;
}

message UserDetails {
  string username = 1;
  repeated string authorities = 2;
  bool account_non_expired = 3;
  bool account_non_locked = 4;
  bool credentials_non_expired = 5;
  bool enabled = 6;
}
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
}








